-Add support for 64 bit packet ids
-usbredirparser:
 -Add state serialization support
 -API and ABI changed to use 64 bit ids, all users need to be adjusted and
  recompiled for this!!
-usbredirhost:
 -Remove bulk packets time out, this fixes various devices not working
 -Ack packet cancels immediately
 -Now supports 64 bits packet ids
 -Use libusb_error_name instead of logging raw error codes

usbredir-0.4.3 2 April 2012
---------------------------
-usbredirhost:
 -Don't crash on devices in unconfigured state
 -Restore original device configuration when releasing the device
 -Significantly speed up reset handling
-usbredirserver:
 -Add a manpage

usbredir-0.4.2 6 March 2012
---------------------------
-Add usb_redir_babble status code

-usbredirparser:
 -extend the usb_redir_ep_info packet header with a max_packet_size field
  This new field is only send / received if both sides have the (new)
  usb_redir_cap_ep_info_max_packet_size capability

-usbredirhost:
 -Ensure we always re-attach kernel drivers on cleanup
 -Make set_config handling more robust
 -A set_config or a reset can cause us to loose access to the device, if
  this happens this now gets reported by usbredirhost_read_guest_data
  returning usbredirhost_read_device_lost

usbredir-0.4.1 25 February 2012
-------------------------------
-Brown paper bag release, fix a return without value in a non void function
 which completely breaks usbredir in some cases

usbredir-0.4 22 February 2012
-----------------------------
-Add usb_redir_filter_reject and usb_redir_filter_filter packets and
 an usb_redir_cap_filter capability flag
-Add an usb_redir_device_disconnect_ack packet and
 an usb_redir_cap_device_disconnect_ack capability flag

-usbredirparser:
 -Add an usbredirparser_have_peer_caps function

-usbredirhost:
 -Allow re-using a host instance with multiple devices, see the documentation
  for the new usbredirhost_set_device() function in usbredirhost.h
 -Quite a few bugfixes

